--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Visual Thinking API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/jest/bin/jest",
+    "linter": "node ./node_modules/eslint/bin/eslint.js",
+    "linter-fix": "node ./node_modules/eslint/bin/eslint.js . --fix"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,6 @@
   },
   "homepage": "https://github.com/rorrostieta/vp_codechallenge#readme",
   "devDependencies": {
-    "eslint": "^8.14.0",
     "jest": "^26.0.0"
   }
 }
